# internal/kiwoom/adapter/documented_routes.go
@@ -1,0 +1,190 @@
+package adapter
+
+import "github.com/smallfish06/krsec/internal/kiwoom"
+
+// documentedCustomRouteKeys lists Kiwoom documented REST routes (non-websocket).
+// Source: https://openapi.kiwoom.com/guide/getApiInfoListAjax (fetched 2026-02-28).
+var documentedCustomRouteKeys = []endpointRouteKey{
+	{path: kiwoom.PathAccount, apiID: "ka00001"},
+	{path: kiwoom.PathAccount, apiID: "ka01690"},
+	{path: kiwoom.PathAccount, apiID: "ka10072"},
+	{path: kiwoom.PathAccount, apiID: "ka10073"},
+	{path: kiwoom.PathAccount, apiID: "ka10074"},
+	{path: kiwoom.PathAccount, apiID: "ka10075"},
+	{path: kiwoom.PathAccount, apiID: "ka10076"},
+	{path: kiwoom.PathAccount, apiID: "ka10077"},
+	{path: kiwoom.PathAccount, apiID: "ka10085"},
+	{path: kiwoom.PathAccount, apiID: "ka10088"},
+	{path: kiwoom.PathAccount, apiID: "ka10170"},
+	{path: kiwoom.PathAccount, apiID: "kt00001"},
+	{path: kiwoom.PathAccount, apiID: "kt00002"},
+	{path: kiwoom.PathAccount, apiID: "kt00003"},
+	{path: kiwoom.PathAccount, apiID: "kt00004"},
+	{path: kiwoom.PathAccount, apiID: "kt00005"},
+	{path: kiwoom.PathAccount, apiID: "kt00007"},
+	{path: kiwoom.PathAccount, apiID: "kt00008"},
+	{path: kiwoom.PathAccount, apiID: "kt00009"},
+	{path: kiwoom.PathAccount, apiID: "kt00010"},
+	{path: kiwoom.PathAccount, apiID: "kt00011"},
+	{path: kiwoom.PathAccount, apiID: "kt00012"},
+	{path: kiwoom.PathAccount, apiID: "kt00013"},
+	{path: kiwoom.PathAccount, apiID: "kt00015"},
+	{path: kiwoom.PathAccount, apiID: "kt00016"},
+	{path: kiwoom.PathAccount, apiID: "kt00017"},
+	{path: kiwoom.PathAccount, apiID: "kt00018"},
+	{path: kiwoom.PathAccount, apiID: "kt50020"},
+	{path: kiwoom.PathAccount, apiID: "kt50021"},
+	{path: kiwoom.PathAccount, apiID: "kt50030"},
+	{path: kiwoom.PathAccount, apiID: "kt50031"},
+	{path: kiwoom.PathAccount, apiID: "kt50032"},
+	{path: kiwoom.PathAccount, apiID: "kt50075"},
+	{path: kiwoom.PathChart, apiID: "ka10060"},
+	{path: kiwoom.PathChart, apiID: "ka10064"},
+	{path: kiwoom.PathChart, apiID: "ka10079"},
+	{path: kiwoom.PathChart, apiID: "ka10080"},
+	{path: kiwoom.PathChart, apiID: "ka10081"},
+	{path: kiwoom.PathChart, apiID: "ka10082"},
+	{path: kiwoom.PathChart, apiID: "ka10083"},
+	{path: kiwoom.PathChart, apiID: "ka10094"},
+	{path: kiwoom.PathChart, apiID: "ka20004"},
+	{path: kiwoom.PathChart, apiID: "ka20005"},
+	{path: kiwoom.PathChart, apiID: "ka20006"},
+	{path: kiwoom.PathChart, apiID: "ka20007"},
+	{path: kiwoom.PathChart, apiID: "ka20008"},
+	{path: kiwoom.PathChart, apiID: "ka20019"},
+	{path: kiwoom.PathChart, apiID: "ka50079"},
+	{path: kiwoom.PathChart, apiID: "ka50080"},
+	{path: kiwoom.PathChart, apiID: "ka50081"},
+	{path: kiwoom.PathChart, apiID: "ka50082"},
+	{path: kiwoom.PathChart, apiID: "ka50083"},
+	{path: kiwoom.PathChart, apiID: "ka50091"},
+	{path: kiwoom.PathChart, apiID: "ka50092"},
+	{path: kiwoom.PathCreditOrder, apiID: "kt10006"},
+	{path: kiwoom.PathCreditOrder, apiID: "kt10007"},
+	{path: kiwoom.PathCreditOrder, apiID: "kt10008"},
+	{path: kiwoom.PathCreditOrder, apiID: "kt10009"},
+	{path: kiwoom.PathELW, apiID: "ka10048"},
+	{path: kiwoom.PathELW, apiID: "ka10050"},
+	{path: kiwoom.PathELW, apiID: "ka30001"},
+	{path: kiwoom.PathELW, apiID: "ka30002"},
+	{path: kiwoom.PathELW, apiID: "ka30003"},
+	{path: kiwoom.PathELW, apiID: "ka30004"},
+	{path: kiwoom.PathELW, apiID: "ka30005"},
+	{path: kiwoom.PathELW, apiID: "ka30009"},
+	{path: kiwoom.PathELW, apiID: "ka30010"},
+	{path: kiwoom.PathELW, apiID: "ka30011"},
+	{path: kiwoom.PathELW, apiID: "ka30012"},
+	{path: kiwoom.PathETF, apiID: "ka40001"},
+	{path: kiwoom.PathETF, apiID: "ka40002"},
+	{path: kiwoom.PathETF, apiID: "ka40003"},
+	{path: kiwoom.PathETF, apiID: "ka40004"},
+	{path: kiwoom.PathETF, apiID: "ka40006"},
+	{path: kiwoom.PathETF, apiID: "ka40007"},
+	{path: kiwoom.PathETF, apiID: "ka40008"},
+	{path: kiwoom.PathETF, apiID: "ka40009"},
+	{path: kiwoom.PathETF, apiID: "ka40010"},
+	{path: kiwoom.PathForeignInst, apiID: "ka10008"},
+	{path: kiwoom.PathForeignInst, apiID: "ka10009"},
+	{path: kiwoom.PathForeignInst, apiID: "ka10131"},
+	{path: kiwoom.PathForeignInst, apiID: "ka52301"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10004"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10005"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10006"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10007"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10011"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10044"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10045"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10046"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10047"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10063"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10066"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10078"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10086"},
+	{path: kiwoom.PathMarketCond, apiID: "ka10087"},
+	{path: kiwoom.PathMarketCond, apiID: "ka50010"},
+	{path: kiwoom.PathMarketCond, apiID: "ka50012"},
+	{path: kiwoom.PathMarketCond, apiID: "ka50087"},
+	{path: kiwoom.PathMarketCond, apiID: "ka50100"},
+	{path: kiwoom.PathMarketCond, apiID: "ka50101"},
+	{path: kiwoom.PathMarketCond, apiID: "ka90005"},
+	{path: kiwoom.PathMarketCond, apiID: "ka90006"},
+	{path: kiwoom.PathMarketCond, apiID: "ka90007"},
+	{path: kiwoom.PathMarketCond, apiID: "ka90008"},
+	{path: kiwoom.PathMarketCond, apiID: "ka90010"},
+	{path: kiwoom.PathMarketCond, apiID: "ka90013"},
+	{path: kiwoom.PathOrder, apiID: "kt10000"},
+	{path: kiwoom.PathOrder, apiID: "kt10001"},
+	{path: kiwoom.PathOrder, apiID: "kt10002"},
+	{path: kiwoom.PathOrder, apiID: "kt10003"},
+	{path: kiwoom.PathOrder, apiID: "kt50000"},
+	{path: kiwoom.PathOrder, apiID: "kt50001"},
+	{path: kiwoom.PathOrder, apiID: "kt50002"},
+	{path: kiwoom.PathOrder, apiID: "kt50003"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10020"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10021"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10022"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10023"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10027"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10029"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10030"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10031"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10032"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10033"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10034"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10035"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10036"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10037"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10038"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10039"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10040"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10042"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10053"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10062"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10065"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka10098"},
+	{path: kiwoom.PathRankingInfo, apiID: "ka90009"},
+	{path: kiwoom.PathSector, apiID: "ka10010"},
+	{path: kiwoom.PathSector, apiID: "ka10051"},
+	{path: kiwoom.PathSector, apiID: "ka20001"},
+	{path: kiwoom.PathSector, apiID: "ka20002"},
+	{path: kiwoom.PathSector, apiID: "ka20003"},
+	{path: kiwoom.PathSector, apiID: "ka20009"},
+	{path: kiwoom.PathShortSell, apiID: "ka10014"},
+	{path: kiwoom.PathSLB, apiID: "ka10068"},
+	{path: kiwoom.PathSLB, apiID: "ka10069"},
+	{path: kiwoom.PathSLB, apiID: "ka20068"},
+	{path: kiwoom.PathSLB, apiID: "ka90012"},
+	{path: kiwoom.PathStockInfo, apiID: "ka00198"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10001"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10002"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10003"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10013"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10015"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10016"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10017"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10018"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10019"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10024"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10025"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10026"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10028"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10043"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10052"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10054"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10055"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10058"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10059"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10061"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10084"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10095"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10099"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10100"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10101"},
+	{path: kiwoom.PathStockInfo, apiID: "ka10102"},
+	{path: kiwoom.PathStockInfo, apiID: "ka90003"},
+	{path: kiwoom.PathStockInfo, apiID: "ka90004"},
+	{path: kiwoom.PathStockInfo, apiID: "kt20016"},
+	{path: kiwoom.PathStockInfo, apiID: "kt20017"},
+	{path: kiwoom.PathTheme, apiID: "ka90001"},
+	{path: kiwoom.PathTheme, apiID: "ka90002"},
+}
